old/etc/iptables/iptables-desktop.rules
# Generated by iptables-save v1.6.0 on Sat Aug 20 16:51:58 2016
*filter
:INPUT ACCEPT [82:22740]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3:230]
:DOCKER - [0:0]
-A INPUT -s 192.168.100.0/24 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 192.168.100.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i enp0s17 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i enp0s17 -o enp0s18 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
COMMIT
# Completed on Sat Aug 20 16:51:58 2016
# Generated by iptables-save v1.6.0 on Sat Aug 20 16:51:58 2016
*nat
:PREROUTING ACCEPT [254:12784]
:INPUT ACCEPT [9:987]
:OUTPUT ACCEPT [12:934]
:POSTROUTING ACCEPT [12:934]
COMMIT
# Completed on Sat Aug 20 16:51:58 2016
